--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <li>About</li>
                 <li>Contact</li>
             </ul>
+            <div class="bar">
+                Bars
+            </div>
             <button>Booking Now</button>
         </span>
     </nav>
