--- a/index.html
+++ b/index.html
@@ -8,43 +8,34 @@
     <title>Document</title>
     <link rel="stylesheet" href="./sass/style.css">
     <link rel="stylesheet" href="./style.css">
-    <!-- iconka silka -->
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 
 <body>
 
-    <nav>
-        <span>
-            <img src="./images/logo.png" alt="">
-            <ul>
-                <li>Home</li>
-                <li>Location</li>
-                <li>Blog</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
-            <div class="bar">
-                Bars
-            </div>
-            <button>Booking Now</button>
-        </span>
-    </nav>
-
     <section id="main1">
-        <div class="container">
-            <div class="parent">
-                <span>
-                    <div class="child">
-                        <h1>Railtrips To Here, <br> There And Everywhere!</h1>
-                        <p>We all wish to start our year the best way possible and <br> also according to a common
-                            belief if you
-                            have a great <br> start to your.</p>
-                        <button>Explore more</button>
+            <div class="container">
+                <div class="header">
+                    <img src="./images/logo.png" alt="">
+                    <ul>
+                        <li>Home</li>
+                        <li>Location</li>
+                        <li>Blog</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </ul>
+                    <button>Booking now</button>
+                </div>
+                <div class="header_subtitle">
+                    <div class="header_h1">
+                        <h1>Railtrips To Here, There And Everywhere!</h1>
                     </div>
-                </span>
+                    <div class="header_p">
+                        <p>We all wish to start our year the best way possible and also according to a common belief if
+                            you have a great start to your.</p>
+                    </div>
+                    <button>Explore more</button>
+                </div>
             </div>
-        </div>
     </section>
 
 
@@ -124,6 +115,7 @@
             </div>
         </div>
     </section>
+
 
 
     <section id="main4">
